[package]
name = "auction-service"
version = "0.0.1"
authors = ["quicky84 <victor.ermolaev@protonmail.com>"]

[dependencies]
exonum = { git = "https://github.com/exonum/exonum" }
iron = "0.6.0"
bodyparser = "0.8.0"
router = "0.6.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0.0"
failure = "0.1.1"
